--- a/.docker/dev/Dockerfile
+++ b/.docker/dev/Dockerfile
@@ -17,13 +17,13 @@ RUN apt-get update && \
 # install pip-tools and pip
 # hadolint ignore=DL3013
 RUN pip install --no-cache-dir -U pip-tools pip
-COPY backend/requirements/requirements.in backend/requirements/dev-requirements.in /code/
 
 # install python dependences
+COPY backend/requirements/requirements.in backend/requirements/dev-requirements.in /code/
 # hadolint ignore=DL3042
 RUN pip-compile -o requirements.txt requirements.in && \
   pip-compile -o dev-requirements.txt dev-requirements.in && \
   pip install --no-cache-dir --no-deps -r dev-requirements.txt
 
-COPY backend/ .
-ENTRYPOINT ["docker/dev/entrypoint.sh"]
+COPY ./backend /code/
+ENTRYPOINT ["sh", "-c", "/code/docker-entrypoint.sh"]
