--- a/.docker/prod/Dockerfile
+++ b/.docker/prod/Dockerfile
@@ -1,3 +1,15 @@
+# FROM node:lts
+#
+# WORKDIR /app
+#
+# COPY frontend/package.json frontend/package-lock.json /app/
+#
+# RUN npm ci
+#
+# COPY frontend /app
+#
+# ENV CI=true
+
 FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -5,26 +17,16 @@ ENV PYTHONNUNBUFFERED 1
 
 WORKDIR /code
 
-# install C dependences
-# for libsass (bulma css frontend)
-# hadolint ignore=DL3008
-RUN apt-get update && \
-  apt-get -y --no-install-recommends install build-essential && \
-  rm -rf /var/lib/apt/lists/*
-
 # install python dependences
 # install pip-tools and pip
 # hadolint ignore=DL3013
 RUN pip install --no-cache-dir -U pip-tools pip
-COPY requirements/requirements.in /code/
 
+COPY backend/requirements/requirements.in /code/
 # hadolint ignore=DL3042
 RUN pip-compile -o requirements.txt requirements.in && \
   pip install --no-cache-dir --no-deps -r requirements.txt
 
 # run entry scripts
-COPY . .
-ENTRYPOINT ["docker/prod/entrypoint.sh"]
-
-# expose port
-EXPOSE 8000
+COPY ./backend /code/
+ENTRYPOINT ["sh", "-c", "/code/docker-entrypoint.sh"]
