--- a/.dockerignore
+++ b/.dockerignore
@@ -1,27 +1,8 @@
-*.pyc
-*.pyo
-*.mo
-*.db
-*.css.map
-*.egg-info
-*.sql.gz
-*.log
-.cache
-.project
-.idea
-.pydevproject
-.idea/workspace.xml
-.DS_Store
-.git/
-.sass-cache
-.vagrant/
-__pycache__
-dist
-docs
-env
-logs
-web/media
-web/static/CACHE
-stats
+.env
 Dockerfile
+.dockerignore
 node_modules
+npm-debug.log
+README.md
+.next
+.git
