--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db-seed": "NODE_ENV=development prisma db seed"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -42,5 +43,8 @@
   },
   "ct3aMetadata": {
     "initVersion": "6.11.4"
+  },
+  "prisma": {
+    "seed": "tsx param/seed.ts"
   }
 }
