--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "db-seed": "NODE_ENV=development prisma db seed"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.15.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^4.16.0",
     "@trpc/client": "^10.0.0",
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "date-fns": "^2.29.3",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
   },
