--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.15.0",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.5.0",
+    "@prisma/client": "^4.8.1",
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^4.16.0",
     "@trpc/client": "^10.0.0",
@@ -21,13 +21,15 @@
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
     "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
