--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db-seed": "NODE_ENV=development prisma db seed"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.245.0",
     "@floating-ui/react": "^0.15.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.1",
@@ -26,7 +27,9 @@
     "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
+    "react-select": "^5.7.0",
     "superjson": "1.9.1",
     "zod": "^3.18.0",
     "zod-formik-adapter": "^1.2.0"
