--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "class-variance-authority": "^0.4.0",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "next": "13.0.2",
