--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.245.0",
+    "@aws-sdk/s3-request-presigner": "^3.271.0",
     "@floating-ui/react": "^0.15.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.1",
@@ -28,7 +29,6 @@
     "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "superjson": "1.9.1",
