--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "db-seed": "NODE_ENV=development prisma db seed"
+    "db-seed": "NODE_ENV=development prisma db seed",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.245.0",
@@ -44,6 +45,8 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
@@ -56,5 +59,11 @@
   },
   "prisma": {
     "seed": "tsx param/seed.ts"
+  },
+  "lint-staged": {
+    "*.{js|ts|jsx|tsx|md|css}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
